--- a/index.css
+++ b/index.css
@@ -4,4 +4,18 @@
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));/*repeat(6, 1fr or 100px)*/
     /*grid-template-rows: repeat(2, 100px);*/
     grid-auto-rows: 100px;
+    grid-auto-flow: row;
+}
+
+.horizontal {
+    grid-column: span 2;
+}
+
+.vertical {
+    grid-row: span 2;
+}
+
+.big {
+    grid-column: span 2;
+    grid-row: span 2;
 }
